updated agenda and content

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -4,7 +4,7 @@ import AgendaItem from './AgendaItem.astro'
 const data = [
   {
     id: 1,
-    time: { start: '9:30 am', end: '10:00 am' },
+    time: { start: '9:00 am', end: '10:00 am' },
     title: 'Registration and Breakfast',
     description:
       '',
@@ -16,23 +16,23 @@ const data = [
     time: { start: '10:00 am', end: '10:15 am' },
     title: 'Welcome and Opening Remarks',
     description:
-      '',
-    categories: ['food', 'info'],
+      'Loren Mayor, Chief Operating Officer Andrew Wiley, Director, Partners in Conservation ',
+    categories: ['session', 'speaker'],
     day: 1,
   },
   {
     id: 3,
-    time: { start: '10:15 am', end: '12:30 pm' },
-    title: 'Forests Forward - Leading the Way toward a Healthy Planet',
+    time: { start: '10:15 am', end: '11:00 am' },
+    title: 'Safeguarding a Future for Forests: Strategies for Nature, Climate, and People',
     description:
-      '',
-    categories: ['session', 'announcements'],
+      'Kerry Cesareo, Senior Vice President, Forests. From filtering the air we breathe and the water we drink to providing us with products we use every day—forests are essential for our survival. And these extraordinary ecosystems are also home to most of the world’s life on land. Yet we’re losing forests at alarming rates. Learn how WWF’s Forest team is working toward a future in which the world’s critical forests are conserved to sustain nature’s diversity, benefit our climate, and support human well-being.',
+    categories: ['session', 'speaker'],
     day: 1,
   },
   {
     id: 4,
-    time: { start: '12:30 pm', end: '1:45 pm' },
-    title: 'Lunch and Learn',
+    time: { start: '11:00 am', end: '11:15 am' },
+    title: 'Morning Break',
     description:
       '',
     categories: ['food', 'info'],
@@ -40,52 +40,116 @@ const data = [
   },
   {
     id: 5,
-    time: { start: '1:45 pm', end: '2:45 pm' },
-    title: 'Healthy Oceans for the Planet, People, Prosperity, and Peace',
+    time: { start: '11:15 am', end: '12:30 pm' },
+    title: 'A Holistic Approach to Forest Protection: From Critical Landscapes to Global Strategies',
     description:
-      '',
+      'Meg Symington, Managing Director, Amazon. Linda Walker, Senior Director, Corporate Engagement, Forests. Allard Blom, Managing Director, Congo Basin. Annika Terrana, Director, Forests. Confronting the diverse threats facing forests requires an innovative approach. Drawing on sound science and profound expertise, WWF collaborates with key partners in critical landscapes and around the globe. Together, we create and implement novel strategies to address the most pressing issues impacting forests. Hear about our work in the Amazon and Congo Basin, as well as on the forefronts of human health and corporate engagement.',
     categories: ['session', 'speaker'],
     day: 1,
   },
   {
     id: 6,
-    time: { start: '2:45 pm', end: '4:30 pm' },
-    title: `Initiatives for Impact: The Future of Fish and Alaska's Ocean Communites`,
+    time: { start: '12:30 pm', end: '1:45 pm' },
+    title: 'Lunch and Learn',
     description:
-      '',
-    categories: ['session', 'speaker'],
+      'Debra Kathman, Senior Director, Gift Planning. Karl Egloff, Director, Conservation Travel',
+    categories: ['food', 'speaker'],
     day: 1,
   },
   {
     id: 8,
-    time: { start: '4:30pm', end: '?' },
-    title: 'Closing Remarks and Networking Reception',
+    time: { start: '1:45pm', end: '2:30pm' },
+    title: 'Healthy Oceans for the Planet, People, Prosperity, and Peace',
+    description: "Johan Bergenas, Senior Vice President, Oceans. When oceans are healthy, the planet flourishes and people thrive. Now, as the connection between the health of our global seas and climate change is ever present and more political attention and public and private sector resources are devoted to ocean conservation than ever before, WWF has a renewed approach to protecting and restoring our oceans. Learn how WWF takes an integrated approach to ocean conservation, combining place-based seascape conservation work with global-scale initiatives.",
+    categories: ['sesssion','info'],
+    day: 1,
+  },
+  {
+    id: 9,
+    time: { start: '2:30pm', end: '2:45pm' },
+    title: 'Afternoon Break',
     description: "",
     categories: ['info'],
     day: 1,
   },
   {
-    id: 9,
-    time: { start: '9:00am', end: '9:50am' },
-    title: 'Breakfast and social time',
-    description: "",
-    categories: ['info'],
-    day: 2,
-  },
-  {
     id: 10,
-    time: { start: '10:00am', end: '?' },
-    title: 'Depart for Capitol Hill',
-    description: "",
-    categories: ['info'],
-    day: 2,
+    time: { start: '2:45pm', end: '3:30pm' },
+    title: 'Initiatives for Impact: The Future of Fish and the Impacts of Resource Conflict',
+    description: "Sarah Glaser, Senior Director, Oceans Futures. The seas provide life to billions, and nothing represents this relationship better than fish. Climate change is expected to exacerbate fisheries resource conflict by intensifying competition for dwindling fish resources, which will create new challenges for fishing communities that rely on these resources for their livelihoods. Learn how this scenario is playing out in the seascapes around the world and explore the potential for new ideas, partnerships, and science to address these issues and mitigate the impacts of future fisheries conflict.",
+    categories: ['session','info'],
+    day: 1,
   },
   {
     id: 11,
-    time: { start: '11:00am', end: '4:00pm' },
-    title: `Capitol Hill Ocean Week events and tour of the Smithsonian Natural History Museum's Sant Ocean Hall`,
+    time: { start: '3:30pm', end: '4:30pm' },
+    title: 'Initiatives for Impact: Alaska’s Native Communities and Ocean Conservation',
+    description: "Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi …TITLE/community reference? Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals.As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
+    categories: ['session','info'],
+    day: 1,
+  },
+  {
+    id: 12,
+    time: { start: '4:30pm', end: '6:00pm' },
+    title: 'CLosing Remarks and Networking Reception',
+    description: "",
+    categories: ['session','info'],
+    day: 1,
+  },
+  {
+    id: 13,
+    time: { start: '8:00am', end: '8:45am' },
+    title: 'Breakfas',
+    description: "",
+    categories: ['food','info'],
+    day: 2,
+  },
+  {
+    id: 14,
+    time: { start: '8:45am'},
+    title: 'Shuttles depart for Capitol Hill',
     description: "",
     categories: ['info'],
+    day: 2,
+  },
+  {
+    id: 15,
+    time: { start: '9:30am', end: '11:00am' },
+    title: `WWF Ocean Policy Priorities (At the Wilson Center)`,
+    description: "",
+    categories: ['info'],
+    day: 2,
+  },
+  {
+    id: 16,
+    time: { start: '11:00am', end: '12:30pm' },
+    title: 'Lunch',
+    description: "",
+    categories: ['food'],
+    day: 2,
+  },
+  {
+    id: 17,
+    time: { start: '12:30pm', end: '3:00pm' },
+    title: 'Tour of Sant Ocean Hall, National Museum of Natural History ',
+    description: "",
+    categories: ['session', 'info'],
+    day: 2,
+  },
+  {
+    id: 18,
+    time: { start: '3:00pm'},
+    title: 'Symposium Ends',
+    description: "",
+    categories: ['session', 'info'],
+    day: 2,
+  },
+  {
+    id: 19,
+    time: { start: '5:30pm', end: '7:30pm'},
+    title: 'Optional Reception at Capitol Hill Ocean Week. Dirksen Senate Office Building ',
+    description: "",
+    categories: ['food', 'info'],
     day: 2,
   },
 ]
