added "speaker" to agenda

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -9,6 +9,7 @@ const data = [
     description:
       '',
     categories: ['food', 'info'],
+    speaker: '',
     day: 1,
   },
   {
@@ -16,8 +17,9 @@ const data = [
     time: { start: '10:00 am', end: '10:15 am' },
     title: 'Welcome and Opening Remarks',
     description:
-      'Loren Mayor, Chief Operating Officer Andrew Wiley, Director, Partners in Conservation ',
+      '',
     categories: ['session', 'speaker'],
+    speaker: 'Loren Mayor, Chief Operating Officer Andrew Wiley, Director, Partners in Conservation',
     day: 1,
   },
   {
@@ -25,8 +27,9 @@ const data = [
     time: { start: '10:15 am', end: '11:00 am' },
     title: 'Safeguarding a Future for Forests: Strategies for Nature, Climate, and People',
     description:
-      'Kerry Cesareo, Senior Vice President, Forests. From filtering the air we breathe and the water we drink to providing us with products we use every day—forests are essential for our survival. And these extraordinary ecosystems are also home to most of the world’s life on land. Yet we’re losing forests at alarming rates. Learn how WWF’s Forest team is working toward a future in which the world’s critical forests are conserved to sustain nature’s diversity, benefit our climate, and support human well-being.',
+      'From filtering the air we breathe and the water we drink to providing us with products we use every day—forests are essential for our survival. And these extraordinary ecosystems are also home to most of the world’s life on land. Yet we’re losing forests at alarming rates. Learn how WWF’s Forest team is working toward a future in which the world’s critical forests are conserved to sustain nature’s diversity, benefit our climate, and support human well-being.',
     categories: ['session', 'speaker'],
+    speaker: 'Kerry Cesareo, Senior Vice President, Forests',
     day: 1,
   },
   {
@@ -36,6 +39,7 @@ const data = [
     description:
       '',
     categories: ['food', 'info'],
+    speaker:'',
     day: 1,
   },
   {
@@ -43,25 +47,27 @@ const data = [
     time: { start: '11:15 am', end: '12:30 pm' },
     title: 'A Holistic Approach to Forest Protection: From Critical Landscapes to Global Strategies',
     description:
-      'Meg Symington, Managing Director, Amazon. Linda Walker, Senior Director, Corporate Engagement, Forests. Allard Blom, Managing Director, Congo Basin. Annika Terrana, Director, Forests. Confronting the diverse threats facing forests requires an innovative approach. Drawing on sound science and profound expertise, WWF collaborates with key partners in critical landscapes and around the globe. Together, we create and implement novel strategies to address the most pressing issues impacting forests. Hear about our work in the Amazon and Congo Basin, as well as on the forefronts of human health and corporate engagement.',
+      'Confronting the diverse threats facing forests requires an innovative approach. Drawing on sound science and profound expertise, WWF collaborates with key partners in critical landscapes and around the globe. Together, we create and implement novel strategies to address the most pressing issues impacting forests. Hear about our work in the Amazon and Congo Basin, as well as on the forefronts of human health and corporate engagement.',
     categories: ['session', 'speaker'],
+    speaker:'Meg Symington, Managing Director, Amazon. Linda Walker, Senior Director, Corporate Engagement, Forests. Allard Blom, Managing Director, Congo Basin. Annika Terrana, Director, Forests',
     day: 1,
   },
   {
     id: 6,
     time: { start: '12:30 pm', end: '1:45 pm' },
     title: 'Lunch and Learn',
-    description:
-      'Debra Kathman, Senior Director, Gift Planning. Karl Egloff, Director, Conservation Travel',
+    description: '',
     categories: ['food', 'speaker'],
+    speaker: 'Debra Kathman, Senior Director, Gift Planning. Karl Egloff, Director, Conservation Travel',
     day: 1,
   },
   {
     id: 8,
     time: { start: '1:45pm', end: '2:30pm' },
     title: 'Healthy Oceans for the Planet, People, Prosperity, and Peace',
-    description: "Johan Bergenas, Senior Vice President, Oceans. When oceans are healthy, the planet flourishes and people thrive. Now, as the connection between the health of our global seas and climate change is ever present and more political attention and public and private sector resources are devoted to ocean conservation than ever before, WWF has a renewed approach to protecting and restoring our oceans. Learn how WWF takes an integrated approach to ocean conservation, combining place-based seascape conservation work with global-scale initiatives.",
+    description: "When oceans are healthy, the planet flourishes and people thrive. Now, as the connection between the health of our global seas and climate change is ever present and more political attention and public and private sector resources are devoted to ocean conservation than ever before, WWF has a renewed approach to protecting and restoring our oceans. Learn how WWF takes an integrated approach to ocean conservation, combining place-based seascape conservation work with global-scale initiatives.",
     categories: ['sesssion','info'],
+    speaker: 'Johan Bergenas, Senior Vice President, Oceans',
     day: 1,
   },
   {
@@ -76,22 +82,24 @@ const data = [
     id: 10,
     time: { start: '2:45pm', end: '3:30pm' },
     title: 'Initiatives for Impact: The Future of Fish and the Impacts of Resource Conflict',
-    description: "Sarah Glaser, Senior Director, Oceans Futures. The seas provide life to billions, and nothing represents this relationship better than fish. Climate change is expected to exacerbate fisheries resource conflict by intensifying competition for dwindling fish resources, which will create new challenges for fishing communities that rely on these resources for their livelihoods. Learn how this scenario is playing out in the seascapes around the world and explore the potential for new ideas, partnerships, and science to address these issues and mitigate the impacts of future fisheries conflict.",
+    description: "The seas provide life to billions, and nothing represents this relationship better than fish. Climate change is expected to exacerbate fisheries resource conflict by intensifying competition for dwindling fish resources, which will create new challenges for fishing communities that rely on these resources for their livelihoods. Learn how this scenario is playing out in the seascapes around the world and explore the potential for new ideas, partnerships, and science to address these issues and mitigate the impacts of future fisheries conflict.",
     categories: ['session','info'],
+    speaker: 'Sarah Glaser, Senior Director, Oceans Futures',
     day: 1,
   },
   {
     id: 11,
     time: { start: '3:30pm', end: '4:30pm' },
     title: 'Initiatives for Impact: Alaska’s Native Communities and Ocean Conservation',
-    description: "Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi …TITLE/community reference? Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals.As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
+    description: "As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
     categories: ['session','info'],
+    speaker: 'Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi …TITLE/community reference? Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals',
     day: 1,
   },
   {
     id: 12,
     time: { start: '4:30pm', end: '6:00pm' },
-    title: 'CLosing Remarks and Networking Reception',
+    title: 'Closing Remarks and Networking Reception',
     description: "",
     categories: ['session','info'],
     day: 1,
