--- a/partner_symposium/src/components/Hero.astro
+++ b/partner_symposium/src/components/Hero.astro
@@ -4,7 +4,7 @@ import Timeline from './Timeline';
 import { Accordion, AccordionItem } from 'accessible-astro-components';
 
 
-const { src = '' } = Astro.props
+const { src ='partner_symposium/public/PartnerSymposium_yellow.png' } = Astro.props
 ---
 
 <section class="hero my-8 md:my-18">
