--- a/partner_symposium/src/components/AgendaItem.astro
+++ b/partner_symposium/src/components/AgendaItem.astro
@@ -8,7 +8,7 @@ const speakerBio = (itemSpeakerBio) => {
 ---
 
 {item && (<li>
-  <div class="time-banner bg-gradient-to-r from-yellow-300 to bg- sticky top-0">
+  <div class="time-banner bg-gradient-to-r from-yellow-300 to bg-white sticky top-0">
     <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
       <p class="text-2xl leading-6 text-gray-900"> <strong class="font-semibold ml-5">{item.time.start} - {item.time.end}</strong> </p>
     </div>
