--- a/partner_symposium/src/components/Footer.astro
+++ b/partner_symposium/src/components/Footer.astro
@@ -18,7 +18,7 @@ import Navigation from './Navigation.astro'
         <a href="/venue">Venue</a>
       </li>
       <li class="menu-item">
-        <a href="">Experts</a>
+        <a href="/Speakers">Experts</a>
       </li>
     </ul>
   </Navigation>
