changes to content

--- a/partner_symposium/src/components/Agenda.astro
+++ b/partner_symposium/src/components/Agenda.astro
@@ -93,7 +93,7 @@ const data = [
     title: 'Initiatives for Impact: Alaska’s Native Communities and Ocean Conservation',
     description: "As the Arctic region is experiencing some of the most rapid and severe changes on the planet, Alaska Native communities are among the most vulnerable to the impacts of climate change. This panel discussion will focus on the ocean climate challenges facing Alaska Native communities from several generations of community members—from Elders who hold traditional knowledge about the impacts of climate change and adaptations, to youth ambassadors who bring fresh perspectives on the many benefits of technology and innovation. Discover how Native communities are working together to adapt and build resilience.",
     categories: ['session','info'],
-    speaker: 'Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi …TITLE/community reference? Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals',
+    speaker: 'Kyle Newman, Community Partnership Leader, WWF Arctic Program. Alexis Will, Marine Biologist, WWF Arctic Program. Delbert Pungowiyi, Sivungaq, Sivuqaq (St. Lawrence Island). Macy Rae Kenworthy, Arctic Youth Ambassador and Associate at the Alaska Conservation Foundation Megan Onders, Executive Director, Indigenous Peoples Council for Marine Mammals',
     day: 1,
   },
   {
@@ -107,7 +107,7 @@ const data = [
   {
     id: 13,
     time: { start: '8:00am', end: '8:45am' },
-    title: 'Breakfas',
+    title: 'Breakfast',
     description: "",
     categories: ['food','info'],
     day: 2,
@@ -123,9 +123,10 @@ const data = [
   {
     id: 15,
     time: { start: '9:30am', end: '11:00am' },
-    title: `WWF Ocean Policy Priorities (At the Wilson Center)`,
-    description: "",
+    title: `Ocean Policy: Strengthening Marine Ecosystem Resilience to Climate Change (location Wilson Center)`,
+    description: "Overfishing, pollution, coastal development, and a changing climate are increasing pressures on vulnerable marine ecosystems and the communities that depend upon them. The U.S. and partners must work to address these impacts and strengthen the resiliency of marine ecosystems now, so they can withstand the increasing pressures of a warming ocean and changing climate in the future. Join a panel of policy experts from WWF and partner organizations who will discuss policy solutions that strengthen marine ecosystem resilience to the impacts of climate change—now and for years to come. ",
     categories: ['info'],
+    speakers: 'Carolyn Weiss, ICCF/Ocean Caucus Foundation - will provide an overview of some of their engagement to educate around ocean-related legislation on the Hill. Wilson Center - Polar Inst. Wilson Center - Dave Balton. WWF - Ryan Houlihan - will discuss WWF advocacy efforts to address plastics pollution. WWF - Arctic team and/or Ocean Futures or Fisheries team (TBD) (There may also be a tribal member from AK on the panel to talk about impacts they are seeing already as well.) ',
     day: 2,
   },
   {
