--- a/partner_symposium/src/pages/faq.astro
+++ b/partner_symposium/src/pages/faq.astro
@@ -15,7 +15,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
     <During />
     <After />
     <section class="mt-10">
-      <h2 class="mb-4">Other questions about the All Staff Event</h2>
+      <h2 class="mb-4">Other questions about the 2023 Partner Symposium</h2>
       <div class="mx-auto max-w-2xl">
         <Accordion>
           <AccordionItem header="If I cannot attend, will it be broadcast on Zoom?">
