content/styling changes

--- a/partner_symposium/src/components/Header.astro
+++ b/partner_symposium/src/components/Header.astro
@@ -17,18 +17,15 @@ import { SkipLinks } from 'accessible-astro-components'
             <a href="/agenda">Agenda</a>
           </li>
           <li class="submenu-item">
-            <a href="/guest-speakers/">Guest Speakers</a>
+            <a href="/guest-speakers/">Speakers</a>
           </li>
         </ul>
       </li>
       <li class="menu-item">
-        <a href="/how-to-get-there/"></a>
-      </li>
-      <li class="menu-item">
-        <a href="/venue/"></a>
-      </li>
-      <li class="menu-item">
         <a href="/faq/">FAQ</a>
+      </li>
+      <li class="menu-item">
+        <a href="/venue/">WWF HQ</a>
       </li>
     </ul>
   </Navigation>
