--- a/partner_symposium/src/components/During.astro
+++ b/partner_symposium/src/components/During.astro
@@ -2,8 +2,8 @@
 import {Accordion, AccordionItem} from 'accessible-astro-components';
 ---
 <section class="during mt-10" id="during">
-  <h2 class="mb-2">During the day</h2>
-  <h3 class="text-2xl mb-4">Things to know on the day of...</h3>
+  <h2 class="mb-2">Day 1</h2>
+  <h3 class="text-2xl mb-4">Things to know for day one...</h3>
   <div class="mx-auto max-w-2xl">
     <Accordion>
       <AccordionItem header="Getting There">
