--- a/partner_symposium/src/components/Footer.astro
+++ b/partner_symposium/src/components/Footer.astro
@@ -12,13 +12,13 @@ import Navigation from './Navigation.astro'
         <a href="/agenda">Agenda</a>
       </li>
       <li class="menu-item">
-        <a href="/faq/">FAQ</a>
+        <a href="/guest-speakers/">Speakers</a>
       </li>
       <li class="menu-item">
-        <a href="/venue">Venue</a>
+        <a href="/faq/">FAQs</a>
       </li>
       <li class="menu-item">
-        <a href="/Speakers">Experts</a>
+        <a href="/">WWF HQ</a>
       </li>
     </ul>
   </Navigation>
