--- a/partner_symposium/src/components/Header.astro
+++ b/partner_symposium/src/components/Header.astro
@@ -11,13 +11,13 @@ import { SkipLinks } from 'accessible-astro-components'
         <a href="/">Home</a>
       </li>
       <li class="menu-item has-dropdown">
-        <button aria-haspopup="true" aria-expanded="false"></button>
+        <button aria-haspopup="true" aria-expanded="false">Agenda</button>
         <ul class="dropdown-menu">
           <li class="submenu-item">
-            <a href="/agenda">Agenda</a>
+            <a href="/agenda">Day 1</a>
           </li>
           <li class="submenu-item">
-            <a href="/guest-speakers/">Speakers</a>
+            <a href="/agenda">Day 2</a>
           </li>
         </ul>
       </li>
