--- a/partner_symposium/src/components/Navigation.astro
+++ b/partner_symposium/src/components/Navigation.astro
@@ -8,8 +8,8 @@ const { footer = false } = Astro.props
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container flex-col items-center">
     {!footer && <a href="/" class="flex items-center gap-2 !no-underline">
-      <img src={(await import('')).default} alt="WWF All Together Days logo" width="500" class="mb-4" />
-      <span class="font-bold hidden">2023 Partner Symposium</span>
+      <img src={(await import('/Users/kayceemartin/work/Partner-Symposium/partner_symposium/public/PartnerSymposium_yellow.png')).default} alt="WWF All Together Days logo" width="500" class="mb-4" />
+      <span class="font-bold hidden">WWF Partner Symposium</span>
     </a>}
     <div class="wrapper">
       <nav class="desktop-menu max-w-full overflow-hidden lg:overflow-visible" aria-label="Main navigation desktop">
