--- a/partner_symposium/src/components/Header.astro
+++ b/partner_symposium/src/components/Header.astro
@@ -22,6 +22,9 @@ import { SkipLinks } from 'accessible-astro-components'
         </ul>
       </li>
       <li class="menu-item">
+        <a href="/guest-speakers/">Speakers</a>
+      </li>
+      <li class="menu-item">
         <a href="/faq/">FAQ</a>
       </li>
       <li class="menu-item">
