more content and styling changes

--- a/partner_symposium/src/components/Header.astro
+++ b/partner_symposium/src/components/Header.astro
@@ -14,10 +14,10 @@ import { SkipLinks } from 'accessible-astro-components'
         <button aria-haspopup="true" aria-expanded="false">Agenda</button>
         <ul class="dropdown-menu">
           <li class="submenu-item">
-            <a href="/agenda">Day 1</a>
+            <a href="/agenda/">Day 1</a>
           </li>
           <li class="submenu-item">
-            <a href="/agenda">Day 2</a>
+            <a href="/agenda/">Day 2</a>
           </li>
         </ul>
       </li>
