--- a/partner_symposium/src/components/Hero.astro
+++ b/partner_symposium/src/components/Hero.astro
@@ -51,7 +51,7 @@ const { src ='partner_symposium/public/PartnerSymposium_yellow.png' } = Astro.pr
         </Accordion>
         <Accordion>
           <AccordionItem header="Day 2">
-            <p>Impportant information for day two.</p>
+            <p>Important information for day two.</p>
             <a href="/faq#after">Day two...</a>
           </AccordionItem>
         </Accordion>
