--- a/partner_symposium/src/pages/venue.astro
+++ b/partner_symposium/src/pages/venue.astro
@@ -4,11 +4,18 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
 <DefaultLayout title="Venue">
   <section class="container">
     <h1 class="text-gradient">Venue</h1>
-    <div class="my-16 flex flex-col justify-between space-y-4 mb-6">
-      <h2>Main Level</h2>
-      <img src="/venue_map_1.jpg" alt="A map of the venue that shows important areas like bathrooms, elevators, stairs.">
-      <h2>Mezzanine Level</h2>
-      <img src="/venue_map_2.jpg" alt="A map of the venue that shows restrooms and breaout group rooms.">
+    <img src='/Users/kayceemartin/work/Partner-Symposium/partner_symposium/public/HQ.jpg'>
+    <p>
+      Home to World Wildlife Fund headquarters, the WWF building offers 251,707 square feet of premium work habitat. The quadruple LEED Platinum Certified building has a stunning 8-story, sky-lit atrium and the third largest green roof in Washington, DC.
+    </p>
+    <br>
+    <p>  
+      WWF's U.S. headquarters was designed and built to conserve resources, limit waste and pollution, protect the environment, and make wise use of donated funds.
+    </p>
+    <br>
+    </p>
+    For more information on WWF's headquarts please visit <a href="https://www.worldwildlife.org/pages/wwf-s-green-headquarters">our webpage</a>.
+  </p>
     </div>
   </section>
 </DefaultLayout>
