more styling and content changes

--- a/partner_symposium/src/components/Footer.astro
+++ b/partner_symposium/src/components/Footer.astro
@@ -18,7 +18,7 @@ import Navigation from './Navigation.astro'
         <a href="/faq/">FAQs</a>
       </li>
       <li class="menu-item">
-        <a href="/">WWF HQ</a>
+        <a href="/venue">WWF HQ</a>
       </li>
     </ul>
   </Navigation>
