--- a/partner_symposium/src/pages/faq.astro
+++ b/partner_symposium/src/pages/faq.astro
@@ -23,13 +23,13 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
           </AccordionItem>
         </Accordion>
         <Accordion>
-          <AccordionItem header="Will the event be indoors or outdoors?">
-            <p>We’ll use the venue’s large indoor event space for our main activities. There are also some outdoor pavilions and stadium seating that you’ll be able to use during lunch, the reception, and during social time.</p>
+          <AccordionItem header="">
+            <p>.</p>
           </AccordionItem>
         </Accordion>
         <Accordion>
           <AccordionItem header="What's the dress code?">
-            <p>Casual dress is encouraged, especially <a href="https://panda.newheadings.com/">WWF gear</a>! Please wear sneakers or other flat-bottomed shoes because shoes with heels are not permitted on the pitch if we do a group photo. </p>
+            <p></p>
           </AccordionItem>
         </Accordion>
         <Accordion>
@@ -38,15 +38,8 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
           </AccordionItem>
         </Accordion>
         <Accordion>
-          <AccordionItem header="Alcohol Guidance">
-            <p>We’re looking forward to celebrating with you at the reception and Nats Park. Below are some tips that will help ensure that everyone has a good time and stays safe.</p>
-            <br>
-            <ul>
-              <li>Be sure to bring a valid ID with you if you intend to consume alcohol.</li>
-              <li>Drink responsibly and never drink and drive.</li>
-              <li>Hors d'oeuvres will be available 4:30-6 pm at our reception. And of course there’s plentiful food options at Nationals Park.</li>
-              <li>Be mindful of WWF’s <a href="https://worldwildlifefund.sharepoint.com/sites/Policies">Code of Conduct</a> as you enjoy the reception and WWF Night at Nationals Park.</li>
-            </ul>
+          <AccordionItem header="">
+            <p></p>
           </AccordionItem>
         </Accordion>
       </div>
