--- a/partner_symposium/src/components/After.astro
+++ b/partner_symposium/src/components/After.astro
@@ -3,7 +3,7 @@ import {Accordion, AccordionItem} from 'accessible-astro-components';
 ---
 <section class="after mt-10" id="after">
   <h2 class="mb-2">Day 2</h2>
-  <h3 class="text-2xl mb-4"></h3>
+  <h3 class="text-2xl mb-4">Things to know for day two...</h3>
   <div class="mx-auto max-w-2xl">
     <Accordion>
       <AccordionItem header="Getting There">
