--- a/partner_symposium/src/components/BeforeTheDay.astro
+++ b/partner_symposium/src/components/BeforeTheDay.astro
@@ -43,7 +43,7 @@ import {Accordion, AccordionItem} from 'accessible-astro-components';
         </AccordionItem>
       </Accordion>
       <Accordion>
-        <AccordionItem header="What NOT to bring">
+        <AccordionItem header="">
           <div class="flex flex-col justify-between space-y-4 mb-6">
             <ul>
               <li></li>
@@ -56,7 +56,7 @@ import {Accordion, AccordionItem} from 'accessible-astro-components';
         </AccordionItem>
       </Accordion>
       <Accordion>
-        <AccordionItem header="What we will have on hand for you">
+        <AccordionItem header="">
           <div class="flex flex-col justify-between space-y-4 mb-6">
             <ul>
               <li></li>
