--- a/partner_symposium/src/pages/faq.astro
+++ b/partner_symposium/src/pages/faq.astro
@@ -9,13 +9,13 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
 <DefaultLayout title="FAQ">
   <div class="container">
     <div class="my-24">
-      <h1 class="mb-10 text-gradient">FAQ - Frequently Asked Questions</h1>
+      <h1 class="mb-10 text-black">FAQ - Frequently Asked Questions</h1>
     </div>
     <BeforeTheDay />
     <During />
     <After />
     <section class="mt-10">
-      <h2 class="mb-4">Other questions about the 2023 Partner Symposium</h2>
+      <h2 class="mb-4">Other questions about the WWF Partner Symposium</h2>
       <div class="mx-auto max-w-2xl">
         <Accordion>
           <AccordionItem header="If I cannot attend, will it be broadcast on Zoom?">
@@ -33,8 +33,8 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
           </AccordionItem>
         </Accordion>
         <Accordion>
-          <AccordionItem header="Can my family members/friends come to the reception prior?">
-            <p>The reception is for staff only. Please plan to meet up with your guests after the reception.</p>
+          <AccordionItem header="">
+            <p></p>
           </AccordionItem>
         </Accordion>
         <Accordion>
