--- a/partner_symposium/src/pages/agenda.astro
+++ b/partner_symposium/src/pages/agenda.astro
@@ -6,7 +6,7 @@ import Agenda from "../components/Agenda.astro";
 <DefaultLayout title="Agenda">
   <section class="container">
     <div class="my-24">
-      <h1 class="mb-10 text-gradient">Agenda</h1>
+      <h1 class="mb-10 text-green-800">Agenda</h1>
       <Agenda />
     </div>
   </section>
