--- a/partner_symposium/src/pages/faq.astro
+++ b/partner_symposium/src/pages/faq.astro
@@ -9,7 +9,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
 <DefaultLayout title="FAQ">
   <div class="container">
     <div class="my-24">
-      <h1 class="mb-10 text-black">FAQ - Frequently Asked Questions</h1>
+      <h1 class="mb-10 text-green-800">FAQ - Frequently Asked Questions</h1>
     </div>
     <BeforeTheDay />
     <During />
