--- a/partner_symposium/src/pages/guest-speakers/index.astro
+++ b/partner_symposium/src/pages/guest-speakers/index.astro
@@ -5,7 +5,7 @@ import Speakers from '../../components/Speakers.astro'
 <DefaultLayout title="Guest Speakers">
   <section class="container">
     <div class="my-24">
-      <h1 class="mb-10 text-gradient">Guest Speakers</h1>
+      <h1 class="mb-10 text-green-800">Guest Speakers</h1>
       <Speakers />
     </div>
   </section>
