--- a/partner_symposium/src/pages/how-to-get-there.astro
+++ b/partner_symposium/src/pages/how-to-get-there.astro
@@ -3,7 +3,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
 ---
 <DefaultLayout title="How to Get There">
   <section class="container">
-    <h1 class="text-gradient">How to Get There</h1>
+    <h1 class="text-neutral">How to Get There</h1>
     <div class="my-16 flex flex-col justify-between space-y-4 mb-6">
       <h2>Location of the event</h2>
       <p></p>
