--- a/partner_symposium/src/pages/venue.astro
+++ b/partner_symposium/src/pages/venue.astro
@@ -3,7 +3,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
 ---
 <DefaultLayout title="Venue">
   <section class="container">
-    <h1 class="text-gradient">Venue</h1>
+    <h1 class="text-green-800">Venue</h1>
     <img src='/Users/kayceemartin/work/Partner-Symposium/partner_symposium/public/HQ.jpg'>
     <p>
       Home to World Wildlife Fund headquarters, the WWF building offers 251,707 square feet of premium work habitat. The quadruple LEED Platinum Certified building has a stunning 8-story, sky-lit atrium and the third largest green roof in Washington, DC.
