last change for now. waiting on speaker info

--- a/partner_symposium/src/components/Hero.astro
+++ b/partner_symposium/src/components/Hero.astro
@@ -32,7 +32,7 @@ const { src ='partner_symposium/public/PartnerSymposium_yellow.png' } = Astro.pr
       <!-- <img class="hidden lg:block" src={src} alt="" decoding="async" /> -->
       <Timeline>
         <Accordion>
-          <AccordionItem header="Before the day">
+          <AccordionItem header="Before the symposium">
             <p>Get prepped before the WWF Partner Symposium!</p>
             <a href="/faq#before">Before...</a>
           </AccordionItem>
