--- a/partner_symposium/src/components/Speakers.astro
+++ b/partner_symposium/src/components/Speakers.astro
@@ -1,5 +1,5 @@
 
- <!--  <section class="container">
+<section class="container">
     <ul>
       <li><a href="#brenda-mallory">Chair Brenda Mallory</a></li>
       <li><a href="#victoria-herrmann">Victoria Herrmann</a></li>
@@ -7,7 +7,7 @@
     <div class="my-24 flex flex-col justify-between space-y-4 mb-6" id="brenda-mallory">
       <h2>Brenda Mallory, Chair of the White House Council on Environmental Quality</h2>
       <div class="">
-        <img src="/Chair-Mallory-Portrait_opt.jpeg" alt="A headshot of Chair Mallory" class="w-[300px] mb-4 md:mb-0 md:float-left md:mr-4">
+        <img src="" alt="A headshot of Chair Mallory" class="w-[300px] mb-4 md:mb-0 md:float-left md:mr-4">
         <div class="[&>p]:mb-4">
           <p>Brenda Mallory was confirmed by the United States Senate on April 14, 2021 and sworn in as the 12th Chair of the Council on Environmental Quality (CEQ). She is the first African American to serve in this position. As Chair, she advises the President on environmental and natural resources policies that improve, preserve, and protect public health and the environment for America’s communities. She is focused particularly on addressing the environmental justice and climate change challenges the nation faces while advancing opportunities for job growth and economic development.</p>
           <p>Chair Mallory grew up the oldest of four children in a working-class community in Waterbury, Connecticut. Raised in a family of dedicated community and public servants, she learned the importance of hard work, service, and perseverance. She saw the impacts on her community and the larger city when the industrial base of the “Brass City,” as Waterbury was known, abandoned the area, leaving deep physical and economic scars behind. Her personal experience fuels her commitment to making America’s environmental laws work for all people and ensuring that no community is left behind as the nation pursues a clean energy future.</p>
@@ -24,11 +24,11 @@
     <div class="my-24 flex flex-col justify-between space-y-4 mb-6" id="victoria-herrmann">
       <h2>Victoria Herrmann</h2>
       <div class="">
-        <img src="/NatGeoNights_SummerStaffSpectacular_TaylorMickal_55.jpg" alt="A headshot of Victoria Herrmanny" class="w-[400px] mb-4 md:mb-0 md:float-left md:mr-4">
+        <img src="" alt="A headshot of Victoria Herrmanny" class="w-[400px] mb-4 md:mb-0 md:float-left md:mr-4">
         <div class="[&>p]:mb-4">
           <p>Victoria Herrmann is a storyteller and geographer working with communities around the world on climate change adaptation. As a National Geographic Explorer and professor at Georgetown University, she has spent the past decade leading research and capacity-building programs to support communities on the front lines of climate change and safeguard their cultural heritage. She was the lead researcher of “America’s Eroding Edges,” interviewing 350 local leaders across the US to identify what’s needed to safeguard coastal communities against climate change. Her follow-up project, “Rise Up to Rising Tides,” sought to connect national expertise to some of the 13 million Americans at risk of displacement due to rising waters.</p>
           <p>Herrmann was previously the President and Managing Director of The Arctic Institute, has testified before the US House and Senate, and has been recognized as a White House Fellow, a Fulbright awardee to Canada, a Carnegie Endowment Junior Fellow, and a Gates Scholar at the University of Cambridge where she received her PhD in Geography.</p>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
