--- a/partner_symposium/src/pages/index.astro
+++ b/partner_symposium/src/pages/index.astro
@@ -13,19 +13,14 @@ import { Notification } from 'accessible-astro-components'
   <Hero />
   <section class="container">
     <p>
-      Join your fellow Partners in Conservation and other committed WWF supporters for an exclusive event at WWF headquarters in Washington, DC! The 2023 Partner Symposium begins on Monday June 5 with a deep dive into our work with people and communities to protect, restore, and nurture the world’s most ecologically important forests and oceans. Together we will explore the innovative ways we are developing and delivering solutions that protect vital ocean and forest ecosystems and the abundance of life they support.
+      We are excited to welcome you to the 2023 Partner Symposium! We hope you are equally excited to join us for a deep dive into our work with people and communities to protect, restore, and nurture the world’s most ecologically important forests and oceans. Over the course of our 2 days together we will explore the innovative ways we are developing and delivering solutions that protect vital ocean and forest ecosystems and the abundance of life they support.
+    </p>
+    <br>
+    <p>Monday June 5 will be held at the WWF Building, aka WWF HQ, aka the “Panda Palace” – and features leadership and experts from our Forests and Oceans teams. On Tuesday June 6 we will spend the day in DC, beginning at WWF HQ for a quick breakfast and then a shuttle ride over to the Woodrow Wilson International Center for Scholars, where we will hear a panel speak about ocean conservation policy. We’ll head to the National Museum of Natural History in the afternoon for a visit to Sant Ocean Hall. We adjourn in the afternoon and encourage you to participate in other Capitol Hill Ocean Week (CHOW) activities as you are able. <a href="https://preconvirtual.com/chow-2023-agenda/">Learn more about CHOW here.</a>
     </p>
     <br>
     <p>  
-      This two-day event continues Tuesday with sessions that coincide with Capitol Hill Ocean Week (CHOW). This annual event is convened in conjunction with other ocean-focused nonprofit partners and brings people together in the spirit of ocean conservation. The Partner Symposium concludes as CHOW begins, so if you are interested in learning more about ocean conservation, you might consider staying in DC through Thursday to participate in Ocean Week official programming. <a href="https://preconvirtual.com/chow-2023-agenda/">Learn more about CHOW here.</a>
-    </p>
-    <br>
-    <p>
-      When considering your travel plans, we suggest you arrive in DC over the weekend for a Monday morning start. The Symposium will end on Tuesday afternoon, so departing flights that evening would allow you to participate in most/all of the programming.
-    </p>
-    <br>
-    <p>  
-      If you have any questions, please contact us at (888) 993-1100 or <a href="mailto:partners@wwfus.org">partners@wwfus.org</a>. We look forward to seeing you in June!
+      If you have any questions, please contact us at (888) 993-1100 or <a href="mailto:partners@wwfus.org">partners@wwfus.org</a>.
     </p>
   </section>
 </DefaultLayout>
