added speaker bio content, changed welcome note

--- a/partner_symposium/src/pages/faq.astro
+++ b/partner_symposium/src/pages/faq.astro
@@ -57,7 +57,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
     margin-top: 1.5em;
     padding: 5px 10px;
     background: rgb(203,167,210);
-    background: linear-gradient(90deg, rgba(203,167,210,1) 0%, rgba(255,255,255,1) 80%);
+    background: linear-gradient(90deg, rgb(240, 205, 77) 0%, rgba(255,255,255,1) 80%);
   }
   div.accordion ul:not(.accordion__wrapper) {
     list-style-type: disc;
