edited speaker bios

--- a/partner_symposium/src/components/Speakers.astro
+++ b/partner_symposium/src/components/Speakers.astro
@@ -1,34 +1,25 @@
 <section class="container">
   <ul>
     <li><a href="#allard-blom">Allard Blom</a></li>
-    <li><a href="#ariana-bowman">Ariana Bowman</a></li>
     <li><a href="#johan-bergenas">Johan Bergenas</a></li>
+    <li><a href="#ariana-bowman">Ariana Bowman</a></li>
     <li><a href="#kerry-cesareo">Kerry Cesareo</a></li>
     <li><a href="#karl-egloff">Karl Egloff</a></li>
     <li><a href="#sarah-glaser">Sarah Glaser</a></li>
     <li><a href="#ryan-houlihan">Ryan Houlihan</a></li>
     <li><a href="#macy-rae-kenworthy">Macy Rae Kenworthy</a></li>
+    <li><a href="#loren-mayor">Loren Mayor</a></li>  
     <li><a href="#julie-miller">Julie Miller</a></li>
-    <li><a href="#loren-mayor">Loren Mayor</a></li>
-    <li><a href="#andrew-wiley">Andrew Wiley</a></li>
-    
-    <li><a href="#meg-symington">Meg Symington</a></li>
-    <li><a href="#lynda-walker">Lynda Walker</a></li>
-    
-    <li><a href="#annika-terrana">Annika Terrana</a></li>
-    
-    
-    
-    
-   
     <li><a href="#kyle-newman">Kyle Newman</a></li>
-    <li><a href="#alexis-will">Alexis Will</a></li>
-    <li><a href="#delbert-pungowiy">Delbert Pungowiy</a></li>
-    
     <li><a href="#megan-onders">Megan Onders</a></li>
-    <li><a href="#carolyn-weis">Carolyn Weis</a></li>
     <li><a href="#rebecca-pincus">Rebecca Pincus</a></li>
-    
+    <li><a href="#delbert-pungowiy">Delbert Pungowiy</a></li>
+    <li><a href="#meg-symington">Meg Symington</a></li>
+    <li><a href="#annika-terrana">Annika Terrana</a>
+    </li><li><a href="#lynda-walker">Lynda Walker</a></li>
+    <li><a href="#carolyn-weis">Carolyn Weis</a></li>
+    <li><a href="#andrew-wiley">Andrew Wiley</a></li>
+    <li><a href="#alexis-will">Alexis Will</a></li> 
   </ul>
   <div
     class="my-24 mb-6 flex flex-col justify-between space-y-4"
